--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 bmp280 = "0.4.0"
 bno055 = { version = "0.4.0", features = ["std"] }
 linux-embedded-hal = "0.4.0"
+serialport = "4.7.2"
