--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2024"
 
 [dependencies]
 bmp280 = "0.4.0"
-bno055 = { version = "0.4.0", features = ["std"] }
 linux-embedded-hal = "0.4.0"
+linux_bno055 = "0.1.3"
 serialport = "4.7.2"
