--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,12 @@
 name = "sam-rocket"
 version = "0.1.0"
 edition = "2024"
+default-run = "sam-rocket"
 
 [dependencies]
 bmp280 = "0.4.0"
+chrono = { version = "0.4.41", default-features = false, features = ["now"] }
+fixed_deque = "1.3.0"
 linux-embedded-hal = "0.4.0"
 linux_bno055 = "0.1.3"
 serialport = "4.7.2"
