--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ default-run = "salt"
 bmp280 = "0.4.0"
 chrono = { version = "0.4.41", default-features = false, features = ["now"] }
 fixed_deque = "1.3.0"
-linux-embedded-hal = "0.4.0"
-linux_bno055 = "0.1.3"
+linux-embedded-hal = "0.4.1"
+# linux-embedded-hal = "0.4.0"
+mpu6050 = { git = "https://github.com/juliangaal/mpu6050.git"}
 serialport = "4.7.2"
