--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,6 @@ dependencies = [
     "adafruit-circuitpython-bmp280>=3.3.7",
     "matplotlib>=3.10.3",
     "numpy>=2.2.6",
-    # "pyqt6>=6.9.1",
+    "pyqt6>=6.9.1",
     "pyserial>=3.5",
 ]
